--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "hatchling.build"
 [project]
 name = "codetrain"
 version = "0.1.0"
-description = "A Python library for code training and learning"
+description = "A minimalist workflow framework inspired by PocketFlow, designed for African startups with logistics-inspired terminology"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
 authors = [
     {name = "Ricky Macharm", email = "Ricky.Macharm@speedykom.de"}
 ]
-keywords = ["training", "learning", "code"]
+keywords = ["workflow", "pocketflow", "agents", "llm", "automation", "africa", "logistics", "hustle", "business-process", "ai", "code-train"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -25,7 +25,9 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-dependencies = []
+dependencies = [
+    "requests>=2.28.0",
+]
 
 [project.optional-dependencies]
 dev = [
